ohif.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ohif-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ohif-ip
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: ohif-gke-certificate  
spec:
  backend:
    serviceName: keycloak
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ohif
  labels:
    app: ohif
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohif
spec:
  selector:
    matchLabels:
      app: ohif
  replicas: 1
  template:
    metadata:
      labels:
        app: ohif
    spec:
      containers:
      - name: ohif
        image: ohif/viewer
        ports:
        - containerPort: 80
